fix: Update CSS to handle long bread crumb entries (horizontal overflow)
- The bread crumb container element is now horizontally scrollable.

--- a/css/source/scss/media/_all.scss
+++ b/css/source/scss/media/_all.scss
@@ -273,3 +273,33 @@
 		white-space: nowrap;
 	}
 }
+
+// Topbar crumbs media queries.
+@media (max-width: 624px) {
+	.topbar {
+		.crumbs {
+			max-width: 75%;
+		}
+	}
+}
+@media (max-width: 524px) {
+	.topbar {
+		.crumbs {
+			max-width: 70%;
+		}
+	}
+}
+@media (max-width: 424px) {
+	.topbar {
+		.crumbs {
+			max-width: 65%;
+		}
+	}
+}
+@media (max-width: 324px) {
+	.topbar {
+		.crumbs {
+			max-width: 60%;
+		}
+	}
+}
